k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deepgram-voice-agent-proxy
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
    service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout: "3600"
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:us-east-2:396185571030:certificate/ecac602b-fb19-451f-8fd6-4360a7121b2a
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
    alb.ingress.kubernetes.io/target-group-attributes: "stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=60"
    alb.ingress.kubernetes.io/target-type: "ip"
    service.beta.kubernetes.io/aws-load-balancer-type: "external"
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 3000
  - name: https
    port: 443
    targetPort: 3000
  selector:
    app: deepgram-voice-agent-proxy
